--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "framer-motion": "^9.0.1",
+    "hover.css": "^2.3.2",
     "jquery": "^3.6.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
