--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.11.0",
+    "@cloudinary/url-gen": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.3.4",
     "framer-motion": "^9.0.1",
     "hover.css": "^2.3.2",
     "jquery": "^3.6.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-calendar": "^3.4.0",
+    "react-github-stats-card": "^1.0.1",
+    "react-html-parser": "^2.0.2",
+    "react-markdown": "^8.0.5",
     "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.8.0",
+    "remark-gfm": "^3.0.1",
     "tsparticles": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
